--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -1,3 +1,11 @@
 p{
     text-align: center;
 }
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
