--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -12,3 +12,13 @@
 .background{
     background-color: #0F0F0F;
 }
+
+
+.container{
+    margin-top: 20px;
+}
+        
+button{
+    margin: 5px;
+}
+    
