--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -9,3 +9,10 @@ p{
     z-index: 10;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.centerImg{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 20%;
+}
