Adding current progress

--- a/src/pages/Pallete.css
+++ b/src/pages/Pallete.css
@@ -17,3 +17,23 @@
 .white{
     background-color: white;
 }
+
+.rose_quartz_text{
+    color: #BCABAE;
+}
+
+.night_text{
+    color:#0F0F0F;
+}
+
+.jet_text{
+    color:#2D2E2E;
+}
+
+.dim_gray_text{
+    color:#716969;
+}
+
+.white_text{
+    color:white;
+}
